# Ai--algorithms

./: .gitignore  README.md
.github/: copilot-instructions.md
cpp/: .gitignore  CMakeLists.txt
cpp/_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake  nn_example  sa_example
cpp/examples/: nn_example.cpp  sa_example.cpp
cpp/include/: neural_network.hpp  simulated_annealing.hpp
cpp/src/: neural_network.cpp  simulated_annealing.cpp
docs/: neural_network.md  nlp.md  problem_solver.md  simulated_annealing.md
java/: README.md  pom.xml
java/src/main/java/com/racetech/ai/annealing/: AnnealingResult.java  CoolingSchedule.java  ExponentialCooling.java  LinearCooling.java  LogarithmicCooling.java  SimulatedAnnealing.java
java/src/main/java/com/racetech/ai/neuralnetwork/: Activation.java  Layer.java  NeuralNetwork.java  Trainer.java
java/src/test/java/com/racetech/ai/annealing/: SimulatedAnnealingTest.java
python/: requirements.txt
python/neural_network/: __init__.py  mlp.py  trainer.py
python/neural_network/examples/: iris_classification.py
python/nlp/: __init__.py  preprocessing.py  sentiment_analysis.py  text_classification.py
python/nlp/examples/: sentiment_example.py
python/problem_solver/: __init__.py  solver.py
python/problem_solver/examples/: integrated_example.py
python/simulated_annealing/: __init__.py  annealing.py  cooling_schedules.py
python/simulated_annealing/examples/: tsp_solver.py
python/tests/: __init__.py  test_neural_network.py  test_nlp.py  test_simulated_annealing.py
(+3 files in other folders)
